syntax = "proto3";

import "google/protobuf/empty.proto";

service InfoServer {
    rpc GetRobot (RobotQuery) returns (Robot) {}
    rpc GetRobots (google.protobuf.Empty) returns (stream Robot) {}
    rpc ToggleRobot (ToggleRequest) returns (google.protobuf.Empty) {}
    rpc CalibrateRobot (CalibrationRequest) returns (Robot) {}
    rpc GetCalibration(RobotQuery) returns (CalibrationParameters) {}
}

message RobotQuery {
    string id = 1;
}

message ToggleRequest {
    string id = 1;
    bool value = 2;
    bool force = 3;
}

message Robot {
    string id = 1;
    string nickname = 2;
    string robotType = 3;
    string interfaceType = 4;

    oneof robotStatus {
        ToggleStatus toggleStatus = 5;
        RangeStatus rangeStatus = 6;
    };
}

message ToggleStatus {
    bool value = 1;
}

message RangeStatus {
    int64 max = 1;
    int64 min = 2;
    int64 current = 3;
}

message CalibrationRequest {
    string id = 1;
    repeated CalibrationParameter parameters = 2;
}

message CalibrationParameter {
    string name = 1;
    string value = 2;
}

message CalibrationParameters {
    repeated CalibrationParameter parameters = 1;
}